--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pip>=25.0.1",
     "pypdf>=5.4.0",
     "pypdf2>=3.0.1",
+    "python-dotenv>=1.1.0",
     "setuptools>=79.0.0",
     "tiktoken>=0.9.0",
     "wheel>=0.45.1",
