--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
 # 環境変数
 .env
 
+.DS_Store
+
 # 仮想環境
 .venv
 .mypy_cache
+__pycache__
+# IDE
+.vscode
+.idea
+# Jupyter Notebook
+.ipynb_checkpoints
+# Pytest
+.pytest_cache
+# Coverage
+.coverage
+.coverage.*
+# Sphinx
+docs/_build
+# mypy
+.mypy_cache
+# pytype
+.pytype
+# pyre
+.pyre/
+# pyright
+.pyright/
+# Bandit
+bandit.yaml
+# Pylint    
